# langchain-tutorials

./: .gitignore  README.md  requirements.txt
20250301_attempt_01/Level_01_Novice/: .env.example  000.level_guide.md  001.grok_configuration_hello.py  001.grok_configuration_hello_explainer.md  002.openai_configuration_hello.py  (+5 more)
langchain/: topics_list.md
links/: pair-links.md
prompts/: example_generation_process.md
tutorials/: USAGE_GUIDE.md  index.md  setup_ubuntu.sh  setup_windows.ps1
tutorials/Level_01_Novice/: 000_level_01_index.md  001_simple_chat_model.py  001_simple_chat_model_explainer.md  002_basic_messages.py  002_basic_messages_explainer.md  003_chat_history.py  003_chat_history_2.py  003_chat_history_explainer.md  004_basic_tools.py  004_basic_tools_explainer.md  005_tool_calling.py  005_tool_calling_2.py  005_tool_calling_explainer.md  006_structured_output.py  006_structured_output_explainer.md  007_streaming.py  007_streaming_explainer.md  008_memory_management.py  008_memory_management_explainer.md  009_output_parsing.py  009_output_parsing_explainer.md  010_multimodality.py  010_multimodality_explainer.md  011_runnable_interface.py  011_runnable_interface_explainer.md  012_streaming.py  012_streaming_explainer.md  013_lcel.py  013_lcel_explainer.md  014_document_loaders.py  014_document_loaders_explainer.md  015_retrieval.py  015_retrieval_explainer.md  016_evaluation.py  016_evaluation_explainer.md  017_text_splitters.py  017_text_splitters_explainer.md  018_few_shot_prompting.py  018_few_shot_prompting_explainer.md  019_example_selectors.py  (+127 more)
(+186 files in other folders)
