[project]
name = "level-01-novice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.10",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.12",
    "python-dotenv>=1.1.0",
]
